internal/contexts/optimization/formatter/testdata/corpus/cargo.build.txt
    Updating crates.io index
 Downloading crates ...
  Downloaded serde v1.0.210
  Downloaded tokio v1.40.0
  Downloaded syn v2.0.79
   Compiling proc-macro2 v1.0.86
   Compiling unicode-ident v1.0.13
   Compiling libc v0.2.159
   Compiling serde v1.0.210
   Compiling quote v1.0.37
   Compiling syn v2.0.79
   Compiling tokio v1.40.0
   Compiling mycrate v0.1.0 (/home/user/mycrate)
warning: unused variable: `config`
  --> src/main.rs:14:9
   |
14 |     let config = load_config();
   |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_config`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused import: `std::collections::HashMap`
 --> src/lib.rs:3:5
  |
3 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src/main.rs:22:18
   |
22 |     let n: u32 = "hello";
   |            ---   ^^^^^^^ expected `u32`, found `&str`
   |            |
   |            expected due to this

error: could not compile `mycrate` (bin "mycrate") due to 1 previous error; 2 warnings emitted
